clean up 4